--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -12,10 +12,9 @@
         android:capitalize="words"
         android:defaultValue="@string/pref_default_display_name"
         android:inputType="textCapWords"
-        android:key="example_text"
-        android:maxLines="1"
+        android:key="notification_message"
         android:selectAllOnFocus="true"
-        android:singleLine="true"
+        android:singleLine="false"
         android:title="@string/pref_title_display_name" />
 
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
