--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,31 +2,36 @@
 
     <SwitchPreference
         android:defaultValue="true"
-        android:key="example_switch"
-        android:summary="@string/pref_description_social_recommendations"
-        android:title="@string/pref_title_social_recommendations" />
+        android:key="switch_enable_autoemail"
+        android:summary="Enables or disables automatic sending of email/SMS to clients"
+        android:title="Enable auto email/SMS sending" />
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
         android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="notification_message"
+        android:defaultValue="concipiotektura@yahoo.com"
+        android:inputType="textEmailAddress"
+        android:key="email_address"
         android:selectAllOnFocus="true"
-        android:singleLine="false"
-        android:title="@string/pref_title_display_name" />
+        android:title="Sender email"
+        android:dependency="switch_enable_autoemail"/>
 
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-    <ListPreference
-        android:defaultValue="-1"
-        android:entries="@array/pref_example_list_titles"
-        android:entryValues="@array/pref_example_list_values"
-        android:key="example_list"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_add_friends_to_messages" />
+    <EditTextPreference
+        android:capitalize="words"
+        android:defaultValue="Email Subject"
+        android:inputType="textMultiLine"
+        android:key="email_subject"
+        android:selectAllOnFocus="true"
+        android:title="Email Subject"
+        android:maxLength="200"
+        android:dependency="switch_enable_autoemail"/>
 
+    <EditTextPreference
+        android:capitalize="words"
+        android:defaultValue="[Email message]"
+        android:inputType="textMultiLine"
+        android:key="email_message"
+        android:selectAllOnFocus="true"
+        android:title="Edit email body"
+        android:maxLength="200"
+        android:dependency="switch_enable_autoemail"/>
 </PreferenceScreen>
