--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,18 +3,14 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.example.projectfinancial.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="com.example.projectfinancial.PreferenceFragments.GeneralFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="com.example.projectfinancial.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="com.example.projectfinancial.PreferenceFragments.NotificationsFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
-    <header
-        android:fragment="com.example.projectfinancial.SettingsActivity$DataSyncPreferenceFragment"
-        android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/pref_header_data_sync" />
 
 </preference-headers>
