--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Project code"
                 android:singleLine="true"
+                android:inputType="textCapCharacters"
                 android:textColor="@android:color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -38,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Project title"
+                android:inputType="textCapCharacters"
                 android:singleLine="true"
                 android:textColor="@android:color/black" />
 
@@ -54,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Owner"
+                android:inputType="textCapCharacters"
                 android:singleLine="true"
                 android:textColor="@android:color/black" />
 
@@ -83,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Services"
+                android:inputType="textCapCharacters"
                 android:singleLine="true"
                 android:textColor="@android:color/black" />
 
@@ -114,6 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Type"
+                android:inputType="textCapCharacters"
                 android:singleLine="true"
                 android:textColor="@android:color/black" />
 
@@ -147,6 +152,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Subcategory"
                 android:singleLine="true"
+                android:inputType="textCapCharacters"
                 android:textColor="@android:color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
