--- a/app/src/main/res/layout/fragment_portfolio.xml
+++ b/app/src/main/res/layout/fragment_portfolio.xml
@@ -5,49 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.FragmentPortfolio"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:orientation="vertical">
 
-    <com.jaredrummler.materialspinner.MaterialSpinner
-        android:id="@+id/portfolio_typeofproject"
-        app:ms_dropdown_max_height="300dp"
-        app:ms_dropdown_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:ms_hint="Type of project"
-        app:ms_arrow_tint="@color/colorPrimary"
-        app:ms_hide_arrow="false"
-        app:ms_background_color="@color/colorPrimaryLight"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"/>
-
-
-    <com.jaredrummler.materialspinner.MaterialSpinner
-        android:id="@+id/portfolio_subcategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:visibility="gone"
-        app:ms_arrow_tint="@color/colorPrimary"
-        app:ms_background_color="@color/colorPrimaryLight"
-        app:ms_dropdown_height="wrap_content"
-        app:ms_dropdown_max_height="300dp"
-        app:ms_hide_arrow="false"
-        app:ms_hint="Sub category" />
-
-    <Button
-        android:id="@+id/portfolio_button_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="Search Project"
-        android:textColor="@android:color/white" />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/portfolio_recyclerview_projectlist"
+        android:id="@+id/portfolio_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
