--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,10 @@
     <color name="colorPrimary">#f2781f</color>
     <color name="colorPrimaryDark">#f2781f</color>
     <color name="colorAccent">#000000</color>
-    <color name="colorPrimaryLight">#f7f1ed</color>
+    <color name="colorPrimaryLight">#F7F1ED</color>
+
+    <color name="light_font">#FBFBFB</color>
+    <color name="grey_font">#ff9e9e9e</color>
+    <color name="text_shadow">#F8000000</color>
+    <color name="text_shadow_white">#FFFFFF</color>
 </resources>
