--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -16,71 +16,93 @@
             android:id="@+id/addnew_imageview_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginTop="20dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_person"
             android:layout_marginBottom="10dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_projectcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:hint="Code"
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_margin="10dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Project code"
-                android:singleLine="true"
-                android:inputType="textCapCharacters"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_projectname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:hint="Project title"
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Project title"
-                android:inputType="textCapCharacters"
-                android:singleLine="true"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_projectowner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Owner"
-                android:inputType="textCapCharacters"
-                android:singleLine="true"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/addnew_button_projectstatus"
+            android:hint="Owner"
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#efeded"
+            android:layout_marginTop="10dp"
+            />
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Project status"
-            android:backgroundTint="@color/colorPrimaryLight" />
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="STATUS"
+                android:textSize="12sp"
+                android:layout_margin="10dp"/>
+            <CheckBox
+                android:id="@+id/addnew_checkbox_active"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Active"
+                android:layout_marginLeft="20dp"
+                android:textSize="20sp" />
+            <CheckBox
+                android:id="@+id/addnew_checkbox_archived"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="Archived"
+                android:textSize="20sp" />
+            <CheckBox
+                android:id="@+id/addnew_checkbox_proposal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Proposal"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="20sp" />
 
-        <com.dpizarro.autolabel.library.AutoLabelUI
-            android:id="@+id/addnew_autolabel"
+        </LinearLayout>
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="1dp"
+            android:background="#efeded"
+            android:layout_marginTop="10dp" />
 
         <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/addnew_spinner_services"
@@ -92,25 +114,21 @@
             app:ms_arrow_tint="@color/colorPrimary"
             app:ms_hide_arrow="false"
             app:ms_background_color="@color/colorPrimaryLight"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_specificservice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Services"
             android:visibility="gone"
-            app:errorEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Services"
-                android:inputType="textCapCharacters"
-                android:singleLine="true"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_margin="10dp"/>
 
         <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/addnew_spinner_typeofproject"
@@ -124,25 +142,20 @@
             app:ms_background_color="@color/colorPrimaryLight"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_specifictype"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Type"
             android:visibility="gone"
-            app:errorEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Type"
-                android:inputType="textCapCharacters"
-                android:singleLine="true"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_margin="10dp"/>
 
         <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/addnew_spinner_subcategory"
@@ -156,33 +169,29 @@
             app:ms_background_color="@color/colorPrimaryLight"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:visibility="gone"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/addnew_field_specificsubcategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Subcategory"
             android:visibility="gone"
-            app:errorEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Subcategory"
-                android:singleLine="true"
-                android:inputType="textCapCharacters"
-                android:textColor="@android:color/black" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:inputType="textCapCharacters"
+            android:padding="16dp"
+            android:layout_margin="10dp"/>
 
         <Button
             android:id="@+id/addnew_button_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CREATE PROJECT"
-            android:backgroundTint="@color/colorPrimary"
+            android:layout_margin="20dp"
+            android:background="@drawable/button_bg"
             android:textColor="@android:color/white"/>
     </LinearLayout>
 
