--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="@drawable/gradient_bg"
+    android:background="@color/charcoalBlack"
     android:fillViewport="true">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_parent"
@@ -47,32 +47,50 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="25dp" />
 
-        <EditText
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/edittext_bg"
-            android:hint="Username"
-            android:inputType="textEmailAddress"
-            android:padding="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            android:layout_marginTop="70dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@id/guideline"
+            app:layout_constraintEnd_toEndOf="@id/guideline2">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:singleLine="true"
+                android:hint="Username"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/edittext_bg"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/login_username" />
+            android:layout_marginTop="30dp"
+            app:passwordToggleEnabled="true"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
+            app:passwordToggleTint="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/login_username"
+            app:layout_constraintStart_toStartOf="@id/guideline"
+            app:layout_constraintEnd_toStartOf="@id/guideline2">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:hint="Password"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/login_forgotpassword"
@@ -86,7 +104,7 @@
             android:gravity="right"
             android:linksClickable="true"
             android:text="Forgot password"
-            android:textColor="@color/colorAccent"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -111,8 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/white"
-            android:layout_marginBottom="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toBottomOf="@+id/login_button"/>
 
         <TextView
             android:id="@+id/login_createaccount"
@@ -121,8 +139,10 @@
             android:gravity="center"
             android:text="CREATE AN ACCOUNT"
             android:linksClickable="true"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view"
             app:layout_constraintStart_toStartOf="@+id/guideline"
