--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity"
     android:fillViewport="true"
-    android:background="@drawable/gradient_bg">
+    android:background="@color/charcoalBlack">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,55 +54,98 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintTop_toBottomOf="@+id/guideline_top"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/register_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Valid Email"
-            android:inputType="textEmailAddress"
-            android:padding="16dp"
-            android:background="@drawable/edittext_bg"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/register_label"
-            app:layout_constraintStart_toEndOf="@id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
-        <EditText
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                android:hint="Valid Email"
+                android:textSize="15sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/register_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Username"
-            android:padding="16dp"
-            android:background="@drawable/edittext_bg"
             android:layout_marginTop="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/register_email"
-            app:layout_constraintStart_toEndOf="@id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:inputType="text"
+                android:singleLine="true"
+                android:hint="Username"
+                android:textSize="15sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/register_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:background="@drawable/edittext_bg"
             android:layout_marginTop="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/register_username"
-            app:layout_constraintStart_toEndOf="@id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:hint="Password"
+                android:textSize="15sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/register_repassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Re-enter password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:background="@drawable/edittext_bg"
             android:layout_marginTop="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:textColorHint="@android:color/white"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/register_password"
-            app:layout_constraintStart_toEndOf="@id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:hint="Re-enter password"
+                android:textSize="15sp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+        
 
         <Button
             android:id="@+id/register_submit"
