--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#f2781f</color>
     <color name="colorPrimaryDark">#f2781f</color>
     <color name="colorAccent">#000000</color>
     <color name="colorPrimaryLight">#F7F1ED</color>
 
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#fff</color>
     <color name="light_font">#FBFBFB</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#F8000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
+
+    <color name="charcoalBlack">#36454f</color>
 </resources>
